# atomic-habits-api

./: .env.sample  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: __init__.py  settings.py  urls.py
habits/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_associated_habit.py  0004_habit_chat_id.py  0005_alter_habit_chat_id.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
